@@ -601,6 +601,15 @@ gretl_matrix_restricted_ols (const gretl_vector *y, const gretl_matrix *X,
 			     gretl_vector *b, gretl_matrix *vcv,
 			     gretl_vector *uhat, double *s2);
 
+int 
+gretl_matrix_restricted_multi_ols (const gretl_matrix *Y, 
+				   const gretl_matrix *X,
+				   const gretl_matrix *R, 
+				   const gretl_matrix *Q,
+				   gretl_matrix *B, 
+				   gretl_matrix *U,
+				   gretl_matrix *V);
+
 int gretl_matrix_SVD_ols (const gretl_vector *y, const gretl_matrix *X,
 			  gretl_vector *b, gretl_matrix *vcv,
 			  gretl_vector *uhat, double *s2);
